--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using JoseBrito_AP1_P1
 @using JoseBrito_AP1_P1.Components
+@using JoseBrito_AP1_P1.Models
+@using JoseBrito_AP1_P1.Services
